Bugfix/ax 3186 report too long title (#2636)
* add overflow-wrap: break-word; to the title field in order to see the entire title

* upgrade cairocffi and weasyprint

--- a/plugins/gui/templates/report/styles/styles.css
+++ b/plugins/gui/templates/report/styles/styles.css
@@ -242,11 +242,9 @@ a {
     margin-top: 1px;
 }
 .title {
-    /*white-space: nowrap;*/
-    /*text-overflow: ellipsis;*/
-    /*overflow: hidden;*/
     width: 100%;
     display: inline-block;
+    overflow-wrap: break-word;
 }
 
 .box {
